--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id "org.checkerframework" version "0.6.33"
+    id 'com.diffplug.spotless' version '6.22.0'
 }
 
 group = 'edu.njit.jerse'
@@ -11,9 +12,6 @@ repositories {
 }
 
 dependencies {
-    // TODO: this project has other dependencies (e.g., the Checker Framework itself). Some of these
-    // dependencies are stored as .jar files in the lib/ directory. Instead, all the dependencies should
-    // be managed by the build system directly.
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.15.2'
@@ -22,6 +20,10 @@ dependencies {
     implementation 'com.github.javaparser:javaparser-core:3.23.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
+    implementation group: 'org.checkerframework', name: 'checker', version: '3.39.0'
+    implementation group: 'org.checkerframework', name: 'checker-qual', version: '3.39.0'
+    // TODO: Please add anymore checker framework dependencies required here.
 }
 
 test {
@@ -37,7 +39,9 @@ checkerFramework {
     ]
 }
 
-// TODO: we should add a code formatter that automatically enforces
-// some code style. I prefer spotless (https://github.com/diffplug/spotless),
-// personally, but the more important thing is to have some formatter so that
-// all our code has consistent style.
+spotless {
+    java {
+        googleJavaFormat()
+        target 'src/main/java/**/*.java'
+    }
+}
