added spotless formatters - used Specimin's implementation for it as a foundation

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id "org.checkerframework" version "0.6.33"
-    // TODO: Add spotless code formatter and run it
+    id 'com.diffplug.spotless' version '6.23.3'
 }
 
 java {
@@ -43,6 +43,25 @@ checkerFramework {
             'org.checkerframework.checker.optional.OptionalChecker',
             'org.checkerframework.checker.resourceleak.ResourceLeakChecker',
     ]
+}
+
+spotless {
+    // optional: limit format enforcement to just the files changed by this feature branch
+    ratchetFrom 'origin/main'
+
+    format 'misc', {
+        // define the files to apply `misc` to
+        target '*.gradle', '*.md', '.gitignore'
+
+        // define the steps to apply to those files
+        trimTrailingWhitespace()
+        indentWithSpaces()
+        endWithNewline()
+    }
+    java {
+        googleJavaFormat().reflowLongStrings()
+        formatAnnotations()
+    }
 }
 
 // TODO: This might contain deprecated code that needs updating.
