using the user.dir for absolute path to Specimin. made these changes to bypass the CI. Once a user downloads the repo, they should be able to instantly run the tests

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+// TODO: Clean up this file, making it more readable and organized
 plugins {
     id 'java'
     id "org.checkerframework" version "0.6.33"
@@ -37,6 +38,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+
+    // "user.dir" is set to the root directory of the project.
+    // This property can be accessed in the test code to dynamically determine the project's root directory.
+    systemProperty "user.dir", project.rootDir
 }
 
 apply plugin: 'org.checkerframework'
